--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.1",
     "react-modal-video": "^2.0.1",
     "react-parallax-tilt": "^1.7.154",
