--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
+    "nodemailer": "^7.0.3",
     "photoswipe": "^5.3.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
